profilelist1exp/unpackaged/objects/Deal_Summary__c.object
<CustomObject>
    <description>This object is to store all the Deal Summary information related to Opportunity.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Summaries</relationshipLabel>
        <relationshipName>Deal_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Spent_Current_Stage__c</fullName>
        <formula>(TODAY() - LastStageChanged__c) + 
IF(Stage__c = $Setup.OWD__c.Oppty_Stage1__c, Stage_Plan__c, 0) + 
IF(Stage__c = $Setup.OWD__c.Oppty_Stage10__c, Stage_Discover__c, 0) +
IF(Stage__c = $Setup.OWD__c.Oppty_Stage30__c, Stage_Qualify__c, 0) + 
IF(Stage__c = $Setup.OWD__c.Oppty_Stage60__c, Stage_Propose__c, 0) + 
IF(Stage__c = $Setup.OWD__c.Oppty_Stage90__c, Stage_Commit__c, 0) + 
IF(Stage__c = $Setup.OWD__c.Oppty_Stage99__c, Stage_Order_Submitted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Spent in Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealId__c</fullName>
        <formula>Opportunity__r.Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForcedCalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ForcedCalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastStageChanged__c</fullName>
        <label>LastStageChanged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Date of Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linked_Strategy__c</fullName>
        <label>Linked to Strategy in Account Plan</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Book_Date_Moved__c</fullName>
        <formula>Opportunity__r.No_times_BookDate_moved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of times Book Date has moved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Call_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Call Plans created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Calls_Logged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Calls logged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Qualified_NPS1__c</fullName>
        <formula>Account__r.No_of_Qualified_NPS_Contacts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Qualified NPS Contacts on Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Qualified_NPS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. of Qualified NPS Contacts-UNUSED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Trip_Reports__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Trip Reports created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <label>Opportunity Plan created</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Summaries</relationshipLabel>
        <relationshipName>Deal_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Scheduled_Opportunity__c</fullName>
        <label>Scheduled Opportunity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Commit1__c</fullName>
        <formula>IF(Stage__c = $Setup.OWD__c.Oppty_Stage90__c, Days_Spent_Current_Stage__c, Stage_Commit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days spent per Stage-Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Commit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stage Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Discover1__c</fullName>
        <formula>IF(Stage__c = $Setup.OWD__c.Oppty_Stage10__c, Days_Spent_Current_Stage__c, Stage_Discover__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days spent per Stage-Discover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Discover__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stage Discover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Order_Submitted1__c</fullName>
        <formula>IF(Stage__c = $Setup.OWD__c.Oppty_Stage99__c, Days_Spent_Current_Stage__c, Stage_Order_Submitted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days spent Stage-OrderSubmitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Order_Submitted__c</fullName>
        <label>Stage Order Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Plan1__c</fullName>
        <formula>IF(Stage__c = $Setup.OWD__c.Oppty_Stage1__c, Days_Spent_Current_Stage__c, Stage_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days spent per Stage-Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stage Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Propose1__c</fullName>
        <formula>IF(Stage__c = $Setup.OWD__c.Oppty_Stage60__c, Days_Spent_Current_Stage__c, Stage_Propose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days spent per Stage-Propose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Propose__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stage Propose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Qualify1__c</fullName>
        <formula>IF(Stage__c = $Setup.OWD__c.Oppty_Stage30__c, Days_Spent_Current_Stage__c, Stage_Qualify__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of days spent per Stage-Qualify</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage_Qualify__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stage Qualify</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>Opportunity__r.Total_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unweighted_Revenue__c</fullName>
        <formula>Opportunity__r.Unweighted_Rev_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unweighted Revenue</label>
        <type>Text</type>
    </fields>
    <label>Deal Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>No_Book_Date_Moved__c</columns>
        <columns>No_Call_Plan__c</columns>
        <columns>No_Calls_Logged__c</columns>
        <columns>No_Qualified_NPS__c</columns>
        <columns>Stage__c</columns>
        <columns>Stage_Plan1__c</columns>
        <columns>Stage_Discover1__c</columns>
        <columns>Stage_Qualify1__c</columns>
        <columns>Stage_Propose1__c</columns>
        <columns>Stage_Commit1__c</columns>
        <columns>LastStageChanged__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Deal Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>